--- a/kubernetes/image-convert.service.yml
+++ b/kubernetes/image-convert.service.yml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: image-convert-service
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - name: http
       port: 8989
