--- a/kubernetes/service.yml
+++ b/kubernetes/service.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: image-convert-service
+  name: my-service-service
 spec:
   type: ClusterIP
   ports:
     - name: http
-      port: 8989
+      port: 9090
       targetPort: 80
       protocol: TCP
   selector:
-    app: image-convert
+    app: my-service
